# bandwidth_analyser

./: BandwidthData.cpp  BandwidthData.h  BandwidthDataListener.h  BandwidthDataPoint.cpp  BandwidthDataPoint.h  BandwidthDay.cpp  BandwidthDay.h  BandwidthFile.cpp  BandwidthFile.h  BandwidthMonth.cpp  BandwidthMonth.h  BandwidthStatistics.cpp  BandwidthStatistics.h  Docker.readme  JSONBase.cpp  JSONBase.h  Jenkins.readme  MyGTKCalendarWindow.cpp  MyGTKCalendarWindow.h  MyGTKWindow.cpp  MyGTKWindow.h  README.md  bandwidth.sh  bandwidth_analyser.cpp  meson.build
tests/: meson.build  test_BandwidthData.cpp
